src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
struct all_addr {
    union {
        struct in_addr addr4;
#ifdef HAVE_IPV6
        struct in6_addr addr6;
#endif
        /* for log_query */
        struct {
            uint16_t keytag, algo, digest;
        } log;
        /* for log_query */
        struct {
            uint32_t rcode;
        } rcode;
        /* for cache_insert of DNSKEY, DS */
        struct {
            uint16_t _class, type;
        } dnssec;
    } addr;
};
/* dns doctor param */
struct doctor {
    struct in_addr in, end, out, mask;
    struct doctor* next;
};
struct mx_srv_record {
    char* name, * target;
    int issrv, srvport, priority, weight;
    uint32_t offset;
    struct mx_srv_record* next;
};
struct txt_record {
    char* name;
    unsigned char* txt;
    uint16_t _class, len;
    int stat;
    struct txt_record* next;
};
struct cname {
    int ttl, flag;
    char* alias, * target;
    struct cname* next, * targetp;
};
struct interface_name {
    char* name; /* domain name */
    char* intr; /* interface name */
    int family; /* AF_INET, AF_INET6 or zero for both */
    struct addrlist* addr;
    struct interface_name* next;
};
union bigname {
    char name[MAXDNAME];
    union bigname* next; /* freelist */
};
struct blockdata {
    struct blockdata* next;
    unsigned char key[KEYBLOCK_LEN];
};
struct crec {
    struct crec* hash_next;
    struct crec* prev;
    struct crec* next;
    /* union is 16 bytes when doing IPv6, 8 bytes on 32 bit machines without IPv6 */
    union {
        struct all_addr addr;
        struct {
            union {
                struct crec* cache;
                struct interface_name* int_name;
            } target;
            uint32_t uid; /* 0 if union is interface-name */
        } cname;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, flags, keytag;
            unsigned char algo;
        } key;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, keytag;
            unsigned char algo;
            unsigned char digest;
        } ds;
    } addr;
    time_t ttd; /* time to die */
    /* used as class if DNSKEY/DS, index to source for F_HOSTS */
    uint32_t uid;
    uint16_t flags;
    union {
        char sname[SMALLDNAME];
        union bigname* bname;
        char* namep;
    } name;
};
/* struct sockaddr is not large enough to hold any address,
   and specifically not big enough to hold an IPv6 address.
   Blech. Roll our own. */
union mysockaddr {
    struct sockaddr sa;
    struct sockaddr_in in;
#if defined(HAVE_IPV6)
    struct sockaddr_in6 in6;
#endif
};
struct ServerFd {
    int fd;
    union mysockaddr source_addr;
//    char _interface[IF_NAMESIZE+1];
    std::string _interface;
    uint32_t preallocated;
    uint32_t used;
    uint32_t ifindex;
    struct ServerFd* next;
};
struct randfd {
    int fd;
    uint16_t refcount, family;
};
struct server {
    union mysockaddr addr, source_addr;
//    char interface[IF_NAMESIZE+1];
    std::string _interface;
    struct ServerFd* sfd;
    char* domain; /* set if this server only handles a domain. */
    int flags, tcpfd, edns_pktsz;
    time_t pktsz_reduced;
    uint32_t queries, failed_queries;
#ifdef HAVE_LOOP
    uint32_t uid;
#endif
    struct server* next;
};
struct frec {
    union mysockaddr source;
    struct all_addr dest;
    struct server* sentto; /* NULL means free */
    struct randfd* rfd4;
#ifdef HAVE_IPV6
    struct randfd *rfd6;
#endif
    uint32_t iface;
    uint16_t orig_id, new_id;
    int log_id, fd, forwardall, flags;
    time_t time;
    unsigned char* hash[HASH_SIZE];
#ifdef HAVE_DNSSEC
    int _class, work_counter;
    struct blockdata *stash; /* Saved reply, whilst we validate */
    size_t stash_len;
    struct frec *dependent; /* Query awaiting internally-generated DNSKEY or DS query */
    struct frec *blocking_query; /* Query which is blocking us. */
#endif
    struct frec* next;
};
struct dhcp_lease {
    int clid_len;          /* length of client identifier */
    unsigned char* clid;   /* clientid */
    char* hostname, * fqdn; /* name from client-hostname option or config */
    char* old_hostname;    /* hostname before it moved to another lease */
    int flags;
    time_t expires;        /* lease expiry */
#ifdef HAVE_BROKEN_RTC
    uint32_t length;
#endif
    int hwaddr_len, hwaddr_type;
    unsigned char hwaddr[DHCP_CHADDR_MAX];
    struct in_addr addr, override, giaddr;
    unsigned char* extradata;
    uint32_t extradata_len, extradata_size;
    int last_interface;
    int new_interface;     /* save possible originated interface */
    int new_prefixlen;     /* and its prefix length */
#ifdef HAVE_DHCP6
    struct in6_addr addr6;
    int iaid;
    struct slaac_address {
      struct in6_addr addr;
      time_t ping_time;
      int backoff; /* zero -> confirmed */
      struct slaac_address *next;
    } *slaac_address;
    int vendorclass_count;
#endif
    struct dhcp_lease* next;
};
struct dhcp_netid {
    char* net;
    struct dhcp_netid* next;
};
struct dhcp_netid_list {
    struct dhcp_netid* list;
    struct dhcp_netid_list* next;
};
struct hwaddr_config {
    int hwaddr_len, hwaddr_type;
    unsigned char hwaddr[DHCP_CHADDR_MAX];
    uint32_t wildcard_mask;
    struct hwaddr_config* next;
};
struct dhcp_config {
    uint32_t flags;
    int clid_len;          /* length of client identifier */
    unsigned char* clid;   /* clientid */
    char* hostname, * domain;
    struct dhcp_netid_list* netid;
#ifdef HAVE_DHCP6
    struct in6_addr addr6;
#endif
    struct in_addr addr;
    time_t decline_time;
    uint32_t lease_time;
    struct hwaddr_config* hwaddr;
    struct dhcp_config* next;
};
struct dhcp_opt {
    int opt, len, flags;
    union {
        int encap;
        uint32_t wildcard_mask;
        unsigned char* vendor_class;
    } u;
    unsigned char* val;
    struct dhcp_netid* netid;
    struct dhcp_opt* next;
};
struct dhcp_match_name {
    char* name;
    int wildcard;
    struct dhcp_netid* netid;
    struct dhcp_match_name* next;
};
struct pxe_service {
    uint16_t CSA, type;
    char* menu, * basename, * sname;
    struct in_addr server;
    struct dhcp_netid* netid;
    struct pxe_service* next;
};
struct dhcp_context {
    uint32_t lease_time, addr_epoch;
    struct in_addr netmask, broadcast;
    struct in_addr local, router;
    struct in_addr start, end; /* range of available addresses */
#ifdef HAVE_DHCP6
    struct in6_addr start6, end6; /* range of available addresses */
    struct in6_addr local6;
    int prefix, if_index;
    uint32_t valid, preferred, saved_valid;
    time_t ra_time, ra_short_period_start, address_lost_time;
    char *template_interface;
#endif
    int flags;
    struct dhcp_netid netid, * filter;
    struct dhcp_context* next, * current;
};
struct ping_result {
    struct in_addr addr;
    time_t time;
    uint32_t hash;
    struct ping_result* next;
};
struct tftp_file {
    int refcount, fd;
    off_t size;
    dev_t dev;
    ino_t inode;
    char filename[];
};
struct tftp_transfer {
    int sockfd;
    time_t timeout;
    int backoff;
    uint32_t expansion;
    uint32_t blocksize;
    uint32_t block;
    off_t offset;
    union mysockaddr peer;
    char carrylf;
    char netascii;
    char opt_transize;
    char opt_blocksize;
    struct tftp_file* file;
    struct tftp_transfer* next;
};
void next_uid(struct crec* crecp);
void log_query(uint32_t flags, char* name, struct all_addr* addr, char* arg);
char* record_source(uint32_t index);
char* querystr(char* desc, uint16_t type);
int cache_find_non_terminal(char* name, time_t now);
struct crec* cache_find_by_addr(struct crec* crecp,
        struct all_addr* addr, time_t now,
        uint32_t prot);
struct crec* cache_find_by_name(struct crec* crecp,
        char* name, time_t now, uint32_t prot);
void cache_end_insert(void);
void cache_start_insert(void);
struct crec* cache_insert(char* name, struct all_addr* addr,
        time_t now, unsigned long ttl, uint16_t flags);
struct in_addr a_record_from_hosts(char* name, time_t now);
int cache_make_stat(struct txt_record* t);
char* cache_get_name(struct crec* crecp);
char* cache_get_cname_target(struct crec* crecp);
struct blockdata *blockdata_alloc(char *data, size_t len);
void *blockdata_retrieve(struct blockdata *block, size_t len, void *data);
/* domain.c */
char* get_domain(struct in_addr addr);
int is_name_synthetic(int flags, char* name, struct all_addr* addr);
int is_rev_synth(int flag, struct all_addr* addr, char* name);
uint16_t rand16(void);
int legal_hostname(char* name);
unsigned char* do_rfc1035_name(unsigned char* p, char* sval, char* limit);
void safe_strncpy(char* dest, const char* src, size_t size);
void* whine_malloc(size_t size);
int hostname_isequal(const char* a, const char* b);
int hostname_issubdomain(char* a, char* b);
int is_same_net(struct in_addr a, struct in_addr b, struct in_addr mask);
void prettyprint_time(char* buf, uint32_t t);
int memcmp_masked(unsigned char* a, unsigned char* b, int len,
        uint32_t mask);
int expand_buf(struct iovec* iov, size_t size);
char* print_mac(char* buff, unsigned char* mac, int len);
void my_syslog(int priority, const char* format, ...);
char* option_string(int prot, uint32_t opt, unsigned char* val,
        int opt_len, char* buf, int buf_len);
int enumerate_interfaces(int reset);
struct dhcp_context* address_available(struct dhcp_context* context,
        struct in_addr taddr,
        struct dhcp_netid* netids);
struct dhcp_context* narrow_context(struct dhcp_context* context,
        struct in_addr taddr,
        struct dhcp_netid* netids);
struct ping_result* do_icmp_ping(time_t now, struct in_addr addr,
        uint32_t hash, int loopback);
int address_allocate(struct dhcp_context* context,
        struct in_addr* addrp, unsigned char* hwaddr, int hw_len,
        struct dhcp_netid* netids, time_t now, int loopback);
struct dhcp_config* config_find_by_address(struct dhcp_config* configs, struct in_addr addr);
char* host_from_dns(struct in_addr addr);
struct dhcp_lease* lease4_allocate(struct in_addr addr);
void lease_set_hwaddr(struct dhcp_lease* lease, const unsigned char* hwaddr,
        const unsigned char* clid, int hw_len, int hw_type,
        int clid_len, time_t now, int force);
void lease_set_hostname(struct dhcp_lease* lease, const char* name, int auth, char* domain, char* config_domain);
void lease_set_expires(struct dhcp_lease* lease, uint32_t len, time_t now);
void lease_set_interface(struct dhcp_lease* lease, int _interface, time_t now);
struct dhcp_lease* lease_find_by_client(unsigned char* hwaddr, int hw_len, int hw_type,
        unsigned char* clid, int clid_len);
struct dhcp_lease* lease_find_by_addr(struct in_addr addr);
void lease_prune(struct dhcp_lease* target, time_t now);
void lease_add_extradata(struct dhcp_lease* lease, unsigned char* data,
        uint32_t len, int delim);
int delay_dhcp(time_t start, int sec, int fd, uint32_t addr, uint16_t id);
int add_to_ipset(const char* setname, const struct all_addr* ipaddr, int flags, int remove);
struct dhcp_netid* run_tag_if(struct dhcp_netid* tags);
struct dhcp_netid* option_filter(struct dhcp_netid* tags, struct dhcp_netid* context_tags,
        struct dhcp_opt* opts);
int match_netid(struct dhcp_netid* check, struct dhcp_netid* pool, int tagnotneeded);
char* strip_hostname(char* hostname);
void log_tags(struct dhcp_netid* netid, uint32_t xid);
int match_bytes(struct dhcp_opt* o, unsigned char* p, int len);
char* option_string(int prot, uint32_t opt, unsigned char* val,
        int opt_len, char* buf, int buf_len);
struct dhcp_config* find_config(struct dhcp_config* configs,
        struct dhcp_context* context,
        unsigned char* clid, int clid_len,
        unsigned char* hwaddr, int hw_len,
        int hw_type, char* hostname);
int config_has_mac(struct dhcp_config* config, unsigned char* hwaddr, int len, int type);
size_t add_pseudoheader(struct dns_header* header, size_t plen, unsigned char* limit,
        uint16_t udp_sz, int optno, unsigned char* opt, size_t optlen, int set_do, int replace);