src/slack.rs


#[derive(Copy, Clone)]
#[repr(C)]
pub struct mx_srv_record {
    pub name: &mut String,
    pub target: &mut String,
    pub issrv: i32,
    pub srvport: i32,
    pub priority: i32,
    pub weight: i32,
    pub offset: u32,
    pub next: &mut mx_srv_record,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct frec_src {
    pub source: NetAddress,
    pub dest: all_addr,
    pub iface: u32,
    pub log_id: u32,
    pub fd: i32,
    pub orig_id: u16,
    pub next: &mut frec_src,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct pxe_service {
    pub CSA: u16,
    pub type_0: u16,
    pub menu: &mut String,
    pub basename: &mut String,
    pub sname: &mut String,
    pub server: in_addr,
    pub netid: &mut dhcp_netid,
    pub next: &mut pxe_service,
}











#[derive(Copy, Clone)]
#[repr(C)]
pub struct addr_list {
    pub addr: in_addr,
    pub next: &mut addr_list,
}



#[derive(Copy, Clone)]
#[repr(C)]
pub struct icmp6_filter {
    pub icmp6_filt: [uint32_t; 8],
}

extern "C" {










    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memmove(_:Vec<u8>, _: *const libc::c_void, _: u32)
               ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;









    #[no_mangle]
    fn __ctype_b_loc() -> u16;







    #[no_mangle]
    fn next_uid(crecp:  &mut crec) ;
    // #[no_mangle]
    // fn log_query(flags: u32, name: &mut String,
    //              addr: &mut all_addr, arg: &mut String);
    #[no_mangle]
    fn record_source(index: u32) -> &mut String;
    #[no_mangle]
    fn querystr(desc: &mut String, type_0: u16)
                -> &mut String;
    #[no_mangle]
    fn cache_find_non_terminal(name: &mut String, now: time::Instant)
                               -> i32;
    #[no_mangle]
    fn cache_find_by_addr(crecp: &mut crec, addr: &mut all_addr, now: time::Instant,
                          prot: u32) -> crec;
    #[no_mangle]
    fn cache_find_by_name(crecp: &mut crec, name: &mut String,
                          now: time::Instant, prot: u32) -> crec;
    #[no_mangle]
    fn cache_end_insert();
    #[no_mangle]
    fn cache_start_insert();
    #[no_mangle]
    fn cache_insert(name: &mut String, addr: &mut all_addr,
                    class: u16, now: time::Instant, ttl: u32,
                    flags: u32) -> crec;
    #[no_mangle]
    fn cache_make_stat(t:  &mut txt_record)  -> i32;
    #[no_mangle]
    fn cache_get_name(crecp:  &mut crec)  -> &mut String;
    #[no_mangle]
    fn cache_get_cname_target(crecp:  &mut crec)  -> &mut String;
    #[no_mangle]
    fn blockdata_alloc(data: &mut String, len: usize)
                       -> blockdata;
    #[no_mangle]
    fn blockdata_retrieve(block: &mut blockdata, len: usize,
                          data:Vec<u8>) ->Vec<u8>;
    #[no_mangle]
    fn is_name_synthetic(flags: i32, name: &mut String,
                         addr:  &mut all_addr)  -> i32;
    #[no_mangle]
    fn is_rev_synth(flag: i32, addr: &mut all_addr,
                    name: &mut String) -> i32;
    #[no_mangle]
    fn do_rfc1035_name(p: mut Vec<u8>, sval: &mut String,
                       limit: &mut String) -> mut Vec<u8>;

    #[no_mangle]
    fn is_same_net(a: in_addr, b: in_addr, mask: in_addr) -> i32;
    #[no_mangle]
    fn add_to_ipset(setname: *const libc::c_char, ipaddr: *const all_addr,
                    flags: i32, remove: i32) -> i32;

    #[no_mangle]
    fn add_pseudoheader(header: &mut dns_header, plen: usize,
                        limit: mut Vec<u8>, udp_sz: u16,
                        optno: i32, opt: mut Vec<u8>,
                        optlen: usize, set_do: i32,
                        replace: i32) -> size_t;
    #[no_mangle]
    fn enumerate_interfaces(reset: i32) -> i32;
    #[no_mangle]
    fn hostname_issubdomain(a: &mut String, b: &mut String)
                            -> i32;
}
pub type __builtin_va_list = [__va_list_tag; 1];










pub type __socklen_t = libc::c_uint;
pub type ino_t = __ino64_t;




















pub type va_list = __builtin_va_list;



// pub const _ISALNUM: C2RustUnnamed_0 = 8;
//
// pub const _ISCNTRL: C2RustUnnamed_0 = 2;
// pub const _ISBLANK: C2RustUnnamed_0 = 1;
// pub const _ISGRAPH: C2RustUnnamed_0 = 32768;
// pub const _ISPRINT: C2RustUnnamed_0 = 16384;
// pub const _ISSPACE: C2RustUnnamed_0 = 8192;
// pub const _ISXDIGIT: C2RustUnnamed_0 = 4096;
// pub const _ISDIGIT: C2RustUnnamed_0 = 2048;
// pub const _ISALPHA: C2RustUnnamed_0 = 1024;
// pub const _ISLOWER: C2RustUnnamed_0 = 512;
// pub const _ISUPPER: C2RustUnnamed_0 = 256;





#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_596 {
    pub target: C2RustUnnamed_6,
    pub uid: u32,
    pub is_name_ptr: i32,
}





#[derive(Copy, Clone)]
#[repr(C)]
pub struct doctor {
    pub in_0: in_addr,
    pub end: in_addr,
    pub out: in_addr,
    pub mask: in_addr,
    pub next: &mut doctor,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct frec {
    pub frec_src: frec_src,
    pub sentto: Server,
    pub rfd4: &mut randfd,
    pub rfd6: &mut randfd,
    pub new_id: u16,
    pub forwardall: i32,
    pub flags: i32,
    pub time: time::Instant,
    pub hash: [mut Vec<u8>; 32],
    pub next: &mut frec,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_match_name {
    pub name: &mut String,
    pub wildcard: i32,
    pub netid: &mut dhcp_netid,
    pub next: &mut dhcp_match_name,
}











#[derive(Copy, Clone)]
#[repr(C)]
pub struct tftp_transfer {
    pub sockfd: i32,
    pub timeout: time::Instant,
    pub backoff: i32,
    pub block: u32,
    pub blocksize: u32,
    pub expansion: u32,
    pub offset: off_t,
    pub peer: NetAddress,
    pub source: all_addr,
    pub if_index: i32,
    pub opt_blocksize: libc::c_char,
    pub opt_transize: libc::c_char,
    pub netascii: libc::c_char,
    pub carrylf: libc::c_char,
    pub file: &mut tftp_file,
    pub next: &mut tftp_transfer,
}









#[inline]








#[inline]
unsafe extern "C" fn __uint16_identity(mut __x: __uint16_t) -> __uint16_t {
    return __x;
}




fn a_record_from_hosts(name: &mut String, now: time::Instant) -> in_addr;
#[no_mangle]
fn get_domain(addr: in_addr) -> &mut String;
#[no_mangle]
fn rand16() -> u16;
#[no_mangle]
fn legal_hostname(name: &mut String) -> i32;
#[no_mangle]
fn do_rfc1035_name(p: mut Vec<u8>, sval: &mut String,
                   limit: &mut String) -> mut Vec<u8>;
#[no_mangle]
fn safe_strncpy(dest: &mut String, src: *const libc::c_char,
                size: usize);
#[no_mangle]
fn whine_malloc(size: usize) ->Vec<u8>;
#[no_mangle]
fn hostname_isequal(a: *const libc::c_char, b: *const libc::c_char)
                    -> i32;
#[no_mangle]
fn is_same_net(a: in_addr, b: in_addr, mask: in_addr) -> i32;
#[no_mangle]
fn prettyprint_time(buf: &mut String, t: u32);
#[no_mangle]
fn memcmp_masked(a: mut Vec<u8>, b: mut Vec<u8>,
                 len: i32, mask: u32) -> i32;
#[no_mangle]
fn expand_buf(iov: &mut iovec, size: usize) -> i32;
#[no_mangle]
fn print_mac(buff: &mut String, mac: mut Vec<u8>,
             len: i32) -> &mut String;
#[no_mangle]
fn my_syslog(priority: i32, format: *const libc::c_char, _: ...);
#[no_mangle]
fn option_string(prot: i32, opt: u32,
                 val: mut Vec<u8>, opt_len: i32,
                 buf: &mut String, buf_len: i32)
                 -> &mut String;
#[no_mangle]
fn enumerate_interfaces(reset: i32) -> i32;
#[no_mangle]
fn address_available(context: &mut dhcp_context, taddr: in_addr,
                     netids:  &mut dhcp_netid)  -> dhcp_context;
#[no_mangle]
fn narrow_context(context: &mut dhcp_context, taddr: in_addr,
                  netids:  &mut dhcp_netid)  -> dhcp_context;
#[no_mangle]
fn do_icmp_ping(now: time::Instant, addr: in_addr, hash: u32,
                loopback: i32) -> ping_result;
#[no_mangle]
fn address_allocate(context: &mut dhcp_context, addrp: &mut in_addr,
                    hwaddr: mut Vec<u8>, hw_len: i32,
                    netids: &mut dhcp_netid, now: time::Instant,
                    loopback: i32) -> i32;
#[no_mangle]
fn config_find_by_address(configs: &mut dhcp_config, addr: in_addr)
                          -> dhcp_config;
#[no_mangle]
fn host_from_dns(addr: in_addr) -> &mut String;
#[no_mangle]
fn lease4_allocate(addr: in_addr) -> dhcp_lease;
#[no_mangle]
fn lease_set_hwaddr(lease: &mut dhcp_lease, hwaddr: *const libc::c_uchar,
                    clid: *const libc::c_uchar, hw_len: i32,
                    hw_type: i32, clid_len: i32,
                    now: time::Instant, force: i32);
#[no_mangle]
fn lease_set_hostname(lease: &mut dhcp_lease, name: *const libc::c_char,
                      auth: i32, domain: &mut String,
                      config_domain: &mut String);
#[no_mangle]
fn lease_set_expires(lease: &mut dhcp_lease, len: u32,
                     now: time::Instant);
#[no_mangle]
fn lease_set_interface(lease: &mut dhcp_lease, interface: i32,
                       now: time::Instant);
#[no_mangle]
fn lease_find_by_client(hwaddr: mut Vec<u8>, hw_len: i32,
                        hw_type: i32, clid: mut Vec<u8>,
                        clid_len: i32) -> dhcp_lease;
#[no_mangle]
fn lease_find_by_addr(addr: in_addr) -> dhcp_lease;
#[no_mangle]
fn lease_prune(target: &mut dhcp_lease, now: time::Instant);
#[no_mangle]
fn lease_add_extradata(lease: &mut dhcp_lease, data: mut Vec<u8>,
                       len: u32, delim: i32);
#[no_mangle]
fn match_netid(check: &mut dhcp_netid, pool: &mut dhcp_netid,
               tagnotneeded: i32) -> i32;
#[no_mangle]
fn option_filter(tags: &mut dhcp_netid, context_tags: &mut dhcp_netid,
                 opts:  &mut dhcp_opt)  -> dhcp_netid;
#[no_mangle]
fn log_tags(netid: &mut dhcp_netid, xid: u32_0);
#[no_mangle]
fn run_tag_if(tags:  &mut dhcp_netid)  -> dhcp_netid;
#[no_mangle]
fn config_has_mac(config: &mut dhcp_config, hwaddr: mut Vec<u8>,
                  len: i32, type_0: i32) -> i32;
#[no_mangle]
fn delay_dhcp(start: time::Instant, sec: i32, fd: i32,
              addr: uint32_t, id: u16) -> i32;
#[no_mangle]
fn strtod(_: *const libc::c_char, _: String)
          -> libc::c_double;
#[no_mangle]
fn find_config(configs: &mut dhcp_config, context: &mut dhcp_context,
               clid: mut Vec<u8>, clid_len: i32,
               hwaddr: mut Vec<u8>, hw_len: i32,
               hw_type: i32, hostname: &mut String,
               filter:  &mut dhcp_netid)  -> dhcp_config;
#[no_mangle]
fn strip_hostname(hostname: &mut String) -> &mut String;
#[no_mangle]
fn match_bytes(o: &mut dhcp_opt, p: mut Vec<u8>, len: i32)
               -> i32;
#[no_mangle]
fn strcmp(_: *const libc::c_char, _: *const libc::c_char) -> i32;
#[no_mangle]
fn strncmp(_: *const libc::c_char, _: *const libc::c_char,
           _: u32) -> i32;
#[no_mangle]
fn strchr(_: *const libc::c_char, _: i32) -> &mut String;
#[no_mangle]
fn strlen(_: *const libc::c_char) -> libc::c_ulong;




